# ClipBox

./: Cargo.toml  README.md  build.rs  mod.rs  window.rs
src/: constants.rs  main.rs  storage.rs
src/enums/: app.rs
src/events/: mod.rs  mouse.rs  window.rs
src/settings/: files.rs
src/storage/: clipbox.rs  files.rs  mod.rs  paths.rs  state.rs
src/tests/: test.rs  tests.rs
src/tools/: data_object.rs  encoding.rs  mod.rs
src/windows/: functions.rs  icons.rs  mod.rs  procedure.rs  window.rs
src/windows/components/: buttons.rs
src/windows/procedures/: icon_box_proc.rs  mod.rs  window_proc.rs
