[package]
name = "ClipBox"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[package.metadata]
# Change 'app' to the name of your binary
app = { resource = ["app.manifest"] }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
embed-resource = "2.4.1"

[dependencies.windows-sys]
version = "0.52.0"
features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_Threading",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_DataExchange",
    "Win32_Graphics_Gdi",
    "Win32_System_LibraryLoader",
    "Win32_UI_Shell",
    "Win32_Storage_FileSystem",
    "Win32_System_Com",
    "Win32_System_Ole",
    "Win32_System_Com_StructuredStorage"
]
